# balabala

rcode/ecommerce-grpc/: Cargo.toml  build.rs  readme.md
rcode/ecommerce-grpc/proto/common/: types.proto
rcode/ecommerce-grpc/proto/order/: data.proto  service.proto
rcode/ecommerce-grpc/proto/product/: data.proto  service.proto
rcode/ecommerce-grpc/proto/user/: data.proto  service.proto
rcode/ecommerce-grpc/src/: client.rs  server.rs
rcode/ecommerce-grpc/src/pb/: common.rs  mod.rs  order.rs  product.rs  user.rs
rcode/microservices/: Cargo.toml  build.rs  readme.md
rcode/microservices/proto/common/: base.proto
rcode/microservices/proto/payment/: model.proto  service.proto
rcode/microservices/proto/product/: model.proto  service.proto
rcode/microservices/proto/user/: model.proto  service.proto
rcode/microservices/src/: main.rs
rcode/microservices/src/pb/: common.rs  mod.rs  payment.rs  product.rs  user.rs
rcode/sentinel/: Cargo.toml  build.rs
rcode/sentinel/src/: lib.rs  main.rs
rcode/sentinel/touchstone/: Cargo.toml  build.rs
rcode/sentinel/touchstone/src/: client.rs  lib.rs  main.rs
