[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.0"
prost = "0.13.5"
tonic-build = "0.13.0"
prost-build = "0.13.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.0"